--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.165.0"
+    "three": "^0.165.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
