--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@types/three": "^0.165.0",
     "gsap": "^3.12.5",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "three": "^0.165.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/gsap": "^3.0.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
